--- a/tiago_iaslab_simulation/package.xml
+++ b/tiago_iaslab_simulation/package.xml
@@ -61,6 +61,7 @@
   <build_depend>tf</build_depend>
   <build_depend>control_msgs</build_depend>
   <build_depend>apriltag_ros</build_depend>
+  <build_depend>gazebo_ros_link_attacher</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -74,7 +75,7 @@
   <build_export_depend>tf</build_export_depend>
   <build_export_depend>control_msgs</build_export_depend>
   <build_export_depend>apriltag_ros</build_export_depend>
-
+  <build_export_depend>gazebo_ros_link_attacher</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -90,6 +91,7 @@
   <exec_depend>tf</exec_depend>
   <exec_depend>control_msgs</exec_depend>
   <exec_depend>apriltag_ros</exec_depend>
+  <exec_depend>gazebo_ros_link_attacher</exec_depend>
   
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
